sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:116: error: not found: type int
def casE(t:Int,tplus1:int,tmoins1:Int):Boolean={
                      ^GatesPancake:111: error: not found: value moins1
    if (tmoins1!=9999 && estLibre(tmoins1)){retourne(moins1);return true}
                                                     ^